--- a/confsvr/src/main/resources/application.yml
+++ b/confsvr/src/main/resources/application.yml
@@ -18,10 +18,10 @@ spring:
       server:
         encrypt.enabled: false
         git:
-          uri: https://github.com/carnellj/config-repo/
-          searchPaths: licensingservice,organizationservice
-          username: native-cloud-apps
-          password: 0ffended
+          uri: https://github.com/Yuikij/config-repo
+          searchPaths: licensingservice,organizationservice,tifaservice
+#          username: native-cloud-apps
+#          password: 0ffended
 
 
 ####
@@ -29,14 +29,15 @@ spring:
 ####
 
 #server:
-#   port: 8888
+#  port: 8888
 #spring:
 #  profiles:
 #    active: native
 #  cloud:
-#     config:
-#       server:
-#           native:
-#              searchLocations: file://<chapter 3>/confsvr/src/main/resources/config/licensingservice,
-#                               file://<chapter 3>confsvr/src/main/resources/config/organizationservice
-###              #searchLocations: classpath:config/,classpath:config/licensingservice
+#    config:
+#      server:
+#        native:
+##              searchLocations: file://<chapter 3>/confsvr/src/main/resources/config/licensingservice,
+##                               file://<chapter 3>confsvr/src/main/resources/config/organizationservice
+##              searchLocations:                file:D:\code\github\spmia-chapter3\confsvr\src\main\resources\config\licensingservice
+#               searchLocations: classpath:config/,classpath:config/licensingservice
